--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ionic-conference-app",
-  "version": "0.0.0",
-  "description": "Ionic Conference App",
-  "author": "Ionic Team <hi@ionicframework.com>",
+  "name": "labCap",
+  "version": "0.0.1",
+  "description": "Lab Cap",
+  "author": "Ara",
   "license": "Apache-2.0",
   "scripts": {
     "ng": "ng",
