--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "labCap",
   "version": "0.0.1",
-  "description": "Lab Cap",
+  "description": "labCap",
   "author": "Ara",
   "license": "Apache-2.0",
   "scripts": {
