--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "@angular/pwa": "^0.803.23",
     "@angular/router": "^8.2.14",
     "@angular/service-worker": "^8.2.14",
-    "@capacitor/cli": "^1.5.1",
-    "@capacitor/core": "^1.5.1",
+    "@capacitor/core": "1.5.1",
     "@capacitor/ios": "^1.5.1",
     "@ionic-native/core": "5.0.0-beta.15",
     "@ionic-native/in-app-browser": "5.0.0-beta.15",
@@ -60,6 +59,7 @@
     "@angular/compiler": "^8.2.14",
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "^8.2.14",
+    "@capacitor/cli": "1.5.1",
     "@ionic/angular-toolkit": "^2.1.2",
     "@ionic/lab": "^2.0.19",
     "@types/jasmine": "3.4.6",
