--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cordova-ios": "^5.1.1",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-inappbrowser": "^3.2.0",
+    "cordova-plugin-ionic": "5.4.6",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.1.3",
     "cordova-plugin-splashscreen": "^5.0.3",
