--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -78,7 +78,7 @@
 	<key>IonChannelName</key>
 	<string>Master</string>
 	<key>IonUpdateMethod</key>
-	<string>none</string>
+	<string>auto</string>
 	<key>IonMaxVersions</key>
 	<string>2</string>
 	<key>IonMinBackgroundDuration</key>
