test suppr plugin

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -7,7 +7,7 @@
   "plugins": {
     "SplashScreen": {
       "launchShowDuration": 5002,
-      "launchAutoHide": true
+      "launchAutoHide": false
     }
   }
 }
